sumo/tests/sumo/extended/vaporizer/errors/begin_empty/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'begin' in definition of a vaporizer is empty.
Quitting (on error).
